--- a/package.xml
+++ b/package.xml
@@ -2,16 +2,17 @@
   <name>rqt_msg</name>
   <version>0.4.7</version>
   <description>A Python GUI plugin for introspecting available ROS message types.
-  Note that the msgs available through this plugin is the ones that are stored 
+  Note that the msgs available through this plugin is the ones that are stored
   on your machine, not on the ROS core your rqt instance connects to.
   </description>
+  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
-  
+
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/rqt_msg</url>
-  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
-  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
+  <url type="website">http://wiki.ros.org/rqt_msg</url>
+  <url type="repository">https://github.com/ros-visualization/rqt_msg</url>
+  <url type="bugtracker">https://github.com/ros-visualization/rqt_msg/issues</url>
 
   <author>Aaron Blasdel</author>
 
