--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
   </description>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
+  <maintainer email="mikeblautman@gmail.com">Michael Lautman</maintainer>
 
   <license>BSD</license>
 
