--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,4 @@
-<package>
+<package format="3">
   <name>rqt_msg</name>
   <version>0.4.8</version>
   <description>A Python GUI plugin for introspecting available ROS message types.
@@ -18,15 +18,16 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>python-rospkg</run_depend>
-  <run_depend version_gte="0.2.19">python_qt_binding</run_depend>
-  <run_depend>roslib</run_depend>
-  <run_depend>rosmsg</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>rqt_gui</run_depend>
-  <run_depend>rqt_gui_py</run_depend>
-  <run_depend>rqt_py_common</run_depend>
-  <run_depend>rqt_console</run_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
+  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
+  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
+  <exec_depend>roslib</exec_depend>
+  <exec_depend>rosmsg</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>rqt_py_common</exec_depend>
+  <exec_depend>rqt_console</exec_depend>
 
   <export>
     <architecture_independent/>
