--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ install(DIRECTORY resource
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(PROGRAMS scripts/rqt_msg
+catkin_install_python(PROGRAMS scripts/rqt_msg
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
