--- a/package.xml
+++ b/package.xml
@@ -5,8 +5,7 @@
   Note that the msgs available through this plugin is the ones that are stored
   on your machine, not on the ROS core your rqt instance connects to.
   </description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
-  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
+  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
 
   <license>BSD</license>
 
@@ -15,6 +14,7 @@
   <url type="bugtracker">https://github.com/ros-visualization/rqt_msg/issues</url>
 
   <author>Aaron Blasdel</author>
+  <author>Dirk Thomas</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
