--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,9 @@
   <exec_depend>rqt_py_common</exec_depend>
   <exec_depend>rqt_console</exec_depend>
 
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_xmllint</test_depend>
+
   <export>
     <architecture_independent/>
     <rqt_gui plugin="${prefix}/plugin.xml"/>
